--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,8 @@ a, a:hover{
 .divider{
     background: #D90AA0;
     width: 150px;
-    height: 4px;
-    margin: 10px 0px 30px 0px;
+    height: 3px;
+    margin: 20px 0px 30px 0px;
 }
 
 /*Header*/
@@ -26,6 +26,28 @@ a, a:hover{
 
 .navbar-collapse{
     justify-content: end;
+}
+/*Breadcrumb*/
+.breadcrumb-nav {
+    padding: 0 .5rem;
+    display: inline-block;
+}
+
+.breadcrumb-nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 0;
+    padding: 1vh 2vh;
+    font-style: italic;
+    border-radius: 10px;
+    background: rgba(0 0 0 / 0.3);
+}
+    
+.breadcrumb-nav li:not(:last-child)::after {
+    display: inline-block;
+    margin: 0 .25rem;
+    content: "→";
 }
 
 /*Content*/
@@ -39,7 +61,7 @@ a, a:hover{
     color: #ffffff;
 }
 .main-title h1{
-    text-transform: capitalize;
+    text-transform: uppercase;
 }
 .intro{
     text-align: center;
@@ -64,18 +86,56 @@ a, a:hover{
     border: 3px solid #D90AA0;
     box-shadow: 0px 0px 5px #6c6a6a;
 }
-#reassurance-title{
+
+p.reassurance-title{
     text-transform: uppercase;
-    font-weight: 600;
+    font-weight: 700;
     font-size: 1.2rem;
     margin-bottom: 0px;
 }
 .illustration{
     max-width: 100%;
 }
+.month-list{
+    list-style: none;
+}
+.month-list li{
+    line-height: 3vh;
+}
+/*events*/
+.event-by-month{
+    background-color: #f4f4f4;
+    padding: 3vh;
+    margin: 3vh;
+    border-radius: 20px;
+}
+.event-details{
+    position: relative;
+}
+.event-details > h4{
+    text-transform: ;
+}
+.event-details > p > span{
+    display: block;
+}
+.event-desc{
+    font-style: italic;
+    margin-bottom: vh;
+}
+.event-img{
+    position: absolute;
+    top: -30px;
+    right: 0px;
+    width: 70px;
+}
+/*Contact*/
 
+.social-icons li{
+    list-style: none;
+    display: inline-flex;
+    padding: 1vh;
+}
 /*Footer*/
-
 footer{
     background: #34495e;
     color: #ffffff;
